--- a/index.html
+++ b/index.html
@@ -160,25 +160,25 @@
                 <div class="vertical"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">جلدية</a>
+                <a class="nav-link" href="res-choose-doctor.html">جلدية</a>
               </li>
               <li class="nav-item px-4">
                 <div class="vertical"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">صحة ورشاقة ورجيم</a>
+                <a class="nav-link" href="res-choose-doctor.html">صحة ورشاقة ورجيم</a>
               </li>
               <li class="nav-item px-4">
                 <div class="vertical"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">عناية بالبشرة</a>
+                <a class="nav-link" href="res-choose-doctor.html">عناية بالبشرة</a>
               </li>
               <li class="nav-item px-4">
                 <div class="vertical"></div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">عناية بالشعر</a>
+                <a class="nav-link" href="res-choose-doctor.html">عناية بالشعر</a>
               </li>
               <li class="nav-item px-4">
                 <div class="vertical"></div>
@@ -192,10 +192,10 @@
                   <i class="fas fa-chevron-down highlight px-2"></i>
                 </a>
                 <div class="dropdown-menu text-right">
-                  <a class="dropdown-item py-2 font-weight-bold" href="#">اغذية صحية</a>
-                  <a class="dropdown-item py-2 font-weight-bold" href="#">مقالات عن الامراض المزمنة</a>
-                  <a class="dropdown-item py-2 font-weight-bold" href="#">اخبار طبية</a>
-                  <a class="dropdown-item py-2 font-weight-bold" href="#">اسئلة طبية شائعة</a>
+                  <a class="dropdown-item py-2 font-weight-bold" href="all-article-1.html">اغذية صحية</a>
+                  <a class="dropdown-item py-2 font-weight-bold" href="all-article.html">مقالات عن الامراض المزمنة</a>
+                  <a class="dropdown-item py-2 font-weight-bold" href="all-article-1.html">اخبار طبية</a>
+                  <a class="dropdown-item py-2 font-weight-bold" href="all-article.html">اسئلة طبية شائعة</a>
                 </div>
               </li>
             </ul>
@@ -484,7 +484,7 @@
               <div class="card-body p-3">
                 <img src="./assets/images/012cab3b10ea54653f3e060ad638547c.png" alt="img"
                   class="wide-img cover-img card-img" />
-                <a href="#" class="stretched-link">أغذية صحية
+                <a href="all-article-1.html" class="stretched-link">أغذية صحية
                   <img src="./assets/images/Icon.png" alt="arrow" class="px-2 m-0 arrow-icon" />
                 </a>
                 <p>
@@ -501,7 +501,7 @@
               <div class="card-body p-3">
                 <img src="./assets/images/83bc28c6429c1114f6177a46f31b8ded.png" alt="img"
                   class="wide-img cover-img card-img" />
-                <a href="#" class="stretched-link">مقالات عن الأمراض المزمنة
+                <a href="all-article.html" class="stretched-link">مقالات عن الأمراض المزمنة
                   <img src="./assets/images/Icon.png" alt="arrow" class="px-2 m-0 arrow-icon " />
                 </a>
                 <p>
@@ -518,7 +518,7 @@
               <div class="card-body p-3">
                 <img src="./assets/images/43bf75ad318bb6fe4a6e2934a3e2cf3e.png" alt="img"
                   class="wide-img cover-img card-img" />
-                <a href="#" class="stretched-link">أخبار طبية
+                <a href="all-article-1.html" class="stretched-link">أخبار طبية
                   <img src="./assets/images/Icon.png" alt="arrow" class="px-2 m-0 arrow-icon" />
                 </a>
                 <p>
@@ -534,7 +534,7 @@
               <div class="card-body p-3">
                 <img src="./assets/images/11cb7c5cc0f1a822948485000a189c53.png" alt="img"
                   class="wide-img cover-img card-img" />
-                <a href="#" class="stretched-link">اسئلة طبية شائعة
+                <a href="all-article.html" class="stretched-link">اسئلة طبية شائعة
                   <img src="./assets/images/Icon.png" alt="arrow" class="px-2 m-0 arrow-icon" />
                 </a>
                 <p>
